--- a/style.css
+++ b/style.css
@@ -12,6 +12,20 @@ body{
     font-family: f1;
 }
 
+.hide{
+    visibility: hidden;
+    display: none;
+}
+
+.btn-start{
+    background-color: #e10600;
+    color: white;
+    border-radius: 10px;
+    margin-top: 15vh;
+    text-align: center;
+    font-size: 2em;
+}
+
 .cabecalho{
     margin-top: 1.6em;
     background-color: #e10600;
@@ -38,7 +52,7 @@ body{
     font-size: 2em;
 }
 
-.quiz{
+#quiz{
     margin-top: 5vh;
     width: 50vw;
     height: 60vh;
