--- a/style.css
+++ b/style.css
@@ -97,5 +97,17 @@ body{
     background-color: rgba(51, 49, 49, 0.5);
 }
 
+.resultado{
 
-  
+}
+
+
+*{
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
