--- a/style.css
+++ b/style.css
@@ -97,8 +97,9 @@ body{
     background-color: rgba(51, 49, 49, 0.5);
 }
 
-.resultado{
-
+.jogar-dnv{
+    color: #e10600;
+    margin-top: 1em
 }
 
 
